--- a/src/main/resources/templates/app/option.html
+++ b/src/main/resources/templates/app/option.html
@@ -5,10 +5,29 @@
 <title>設定・参照</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 <link rel="stylesheet" href="css/main.css">
+<script type="text/javascript">
+    function intCheck(){
+		var targetValue = document.getElementById('target').value;
+		alert(targetValue);
+        if (targetValue	.match(/d{3}/)){
+			// 数字3桁だった場合、処理を実行
+			alert("true");
+			return true;
+        }else{
+			alert("false");
+			// 目標値が数値ではない、またはnullの場合(エラーの場合)
+			let targetError = document.getElementById('targetError');
+			// エラーメッセージを設定
+			targetError.innerHTML = '半角数値を3桁で入力してください。';
+			// 送信をキャンセル
+			return false;
+        }
+    }
+</script>
 </head>
 <body>
-<form th:action="@{/option}" method="post">
-	<div th:if="${optionError} eq '1'">今月以前の年月を選択してください。</div>
+<form class="selectMonth" th:action="@{/option}" method="post">
+	<p class="textRed" th:if="${optionError} eq '1'">今月以前の年月を選択してください。</p>
 	<select th:name="year">
 		<option th:each="year : ${year}" th:text="${year}"></option>
 	</select>年
@@ -16,6 +35,11 @@
 			<option th:each="month : ${month}" th:text="${month}"></option>
 	</select>月
 	<input type="submit" value="表示">
+</form>
+<form class="selectMonth" th:action="@{/target}" method="post">
+	<div class="textRed" id="targetError" value=""></div>
+	目標値：<input type="text" id="target" name="target">
+	<input type="submit" value="設定" onclick="return intCheck();">
 </form>
 <table class="table table-striped">
 	<thread>
