目標値と大きく差異がある場合に色を付ける

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -88,3 +88,11 @@
 .selectMonth{
 	margin:10px;
 }
+
+.targetBlue{
+	background-color:skyblue!important;
+}
+
+.targetRed{
+	background-color:palevioletred!important;
+}
